--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -17,6 +17,7 @@ body {
 	@include font-rem($doc-font-size);
 	color: $color_tuatara;
 	background-color: $bodycolor;
+	background-image: 'assets/img/grey.png';
 	background-position: center center;
 	background-attachment: fixed;
 	@media #{$small} {
