--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,7 +3,7 @@ $bodycolor           : #616161;
 $black           	 : #000;
 $white               : #fff;
 $color_gray          : #e8e8e8;
-$red                 : #FF4136;
+$red                 : #00C853;
 $maroon              : #85144b;
 $color_tuatara       : #383838;
 $color_shark         : #282828;
